# Neural-Networks

./: CMakeLists.txt  NN.ipynb  README.md  multiply.cpp  multiply_l.cpp  start  temp.txt  test.ipynb
data/: dot.txt  jit.txt  manualy.txt  simple_times.txt
headers/: matrix.hpp  neural_network.hpp
src/: main.cpp  matrix.cpp  neural_network.cpp
task_1/: README.md  multiply.py
task_1/data/: dot.txt  eigen_times.txt  manual_times.txt  manualy.txt
task_2/: NN.html  NN.ipynb  README.md
